--- a/.github/workflows/python-version.yml
+++ b/.github/workflows/python-version.yml
@@ -6,6 +6,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
-      - run: |
-          python --version
-          pip --version
+      - run: python --version
