--- a/.github/workflows/python-run-tests.yml
+++ b/.github/workflows/python-run-tests.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install Python dependencies
-        run |
+        run: |
           python -m pip install --upgrade pip
           pip install pytest
           if [ -f requirements.txt ]; then
