--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - 'main'
+  pull-requests:
+    branches:
+      - 'main'
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -23,6 +26,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
+          file: ./Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
           tags: genughaben/python-helloworld:latest
