--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -21,7 +21,7 @@ spec:
         app: python-helloworld
     spec:
       containers:
-      - image: genughaben/python-helloworld:v1.0.0
+      - image: genughaben/python-helloworld:latest
         imagePullPolicy: IfNotPresent
         name: python-helloworld
         resources:
